<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="medialibrary">Медиатека</string>
    <string name="preferences">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="Settings">Настройки</string>
    <string name="askForEmailClientInstall">Для отправки письма установите почтовое приложение</string>
    <string name="mailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailContent">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mailRecipient">kawaiicreature@gmail.com</string>
    <string name="chooseEmailClient">Выберите E-mail клиент</string>
    <string name="practicumOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="yandex_practicum_android_developer_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="clear_button">Clear button</string>
    <string name="no_search_results">Ничего не нашлось</string>
    <string name="no_internet_check_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="Update">Обновить</string>
    <string name="ClearHistory">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="year_label">Год</string>
    <string name="album_label">Альбом</string>
    <string name="duration_label">Длительность</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="medialibrary_is_empty">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="CreatePlaylist">Создать</string>
    <string name="playslist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="one_track">трек</string>
    <string name="one_minute">минута</string>
    <string name="from_2_to_4_tracks">трека</string>
    <string name="from_2_to_4_minutes">минуты</string>
    <string name="not_from_1_to_4_tracks">треков</string>
    <string name="not_from_1_to_4_minutes">минут</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист </string>
    <string name="in_this_playlist_no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="no_tracks_in_the_playlist">В плейлисте нет треков</string>
</resources>