<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:navigationIcon="@drawable/back_icon"
        app:title="@string/Settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher1"

        style="@style/settingsItem"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:text="@string/dark_mode"
        android:thumbTintMode="screen" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/settingsItem"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:drawableEnd="@drawable/share_icon"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/settingsItem"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:drawableEnd="@drawable/support_icon"
        android:text="@string/write_to_support" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/settingsItem"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:drawableEnd="@drawable/arrow_forward_icon"
        android:text="@string/user_agreement" />


</LinearLayout>