<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/mainMenuButtonTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"

            style="@style/mainMenuButtonStyle"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:text="@string/search"
            app:icon="@drawable/search_light_mode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/medialibrary"

            style="@style/mainMenuButtonStyle"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:text="@string/medialibrary"
            app:icon="@drawable/library_light_mode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"

            style="@style/mainMenuButtonStyle"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:text="@string/preferences"
            app:icon="@drawable/settings_light_mode" />

    </LinearLayout>

</LinearLayout>