<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medialibrary.ui.NewPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:navigationIconTint="@color/black"
        app:title="Новый плейлист" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <ImageButton
        android:id="@+id/addPlayListCoverButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/border_add_playlist_image"
        android:scaleType="center"
        android:src="@drawable/new_playlist_icon"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/backImageView" />

    <EditText
        android:id="@+id/playlistNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_add_playlist_edit_text_border"
        android:hint="@string/playslist_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/addPlayListCoverButton" />

    <EditText
        android:id="@+id/playlistDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_add_playlist_edit_text_border"
        android:hint="@string/playlist_description"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/playlistNameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPlaylistButton"
        style="@style/createNewPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/vertical_padding_large"
        android:paddingVertical="@dimen/button_margin_8dp"
        android:paddingBottom="32dp"
        android:text="@string/CreatePlaylist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>