<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:navigationIcon="@drawable/back_icon"

        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_padding">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/textEdit_background"
            android:drawableStart="@drawable/search_light_mode"
            android:drawablePadding="8dp"
            android:drawableTint="@color/textEdit_tint"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/textEdit_tint"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/clear_button"
            android:padding="14dp"
            android:src="@drawable/clear"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:src="@drawable/no_internet"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorMessage"
        style="@style/searchErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="@dimen/horizontal_padding_small"
        android:paddingTop="@dimen/vertical_padding_medium"
        android:textColor="@color/black"
        android:visibility="gone"
        tools:text="Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        style="@style/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/vertical_padding_large"
        android:paddingVertical="@dimen/button_margin_8dp"
        android:text="@string/Update"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>